--- a/hexlet-php/composer.json
+++ b/hexlet-php/composer.json
@@ -7,5 +7,19 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "illuminate/collections": "^11.34"
+    },
+     "autoload": {
+        "files": [
+            "src/Runner.php"
+        ]
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.11"
+    },
+    "scripts": {
+        "phpcs": "phpcs"
+    }
 }
+
